# cfb-reference

./: .gitignore  Dockerfile  README.md  prestart.sh  pyproject.toml
.github/workflows/: docker-image.yml  smokeshow.yml  test.yml
app/: database.py  main.py  mapping.py  models.py  save.py
app/alembic/: env.py
app/alembic/versions/: 1a3643bfcd59_initialize_models.py  22fff4c26d00_add_media_model.py  9642d3c14a59_add_game_models.py  ad7d47fd3f11_add_game_models.py  bf4b0fbce677_add_season_stats_models.py  f03d4b2033d1_add_media_model.py  fd631c8fb299_add_season_stats_models.py  fecce7565c14_new_attributes_from_loading_refactor.py
app/api/: main.py
app/api/routes/: games.py  players.py  schools.py  utils.py
app/core/: config.py
app/load/: main.py  utils.py
app/loading/: game.py  main.py  misc.py  player.py  school.py  utils.py
app/models/: __init__.py  game.py  links.py  player.py  school.py  utils.py
app/static/css/: main.css
app/static/js/: upload.js
app/templates/: game.html  index.html  player.html  player_all.html  player_letter.html  school.html  school_all.html  team.html  upload.html
app/templates/shared/: base.html  footer.html  header.html  letter_nav.html  search_results.html
tests/: conftest.py
tests/api/routes/: test_games.py  test_players.py  test_schools.py  test_utils.py
