[tool.poetry]
name = "cfb-reference"
version = "0.1.0"
description = "Self-hosted sports statistics website using NCAA game saves"
authors = ["Hans Missenheim <hansmissenheim@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
ncaadb = "^0.1.1"
pydantic-settings = "^2.3.3"
pytailwindcss = "^0.2.0"
sqlmodel = "^0.0.19"
uvicorn = { extras = ["standard"], version = "^0.30.1" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
